<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false">

    <TextView android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_vertical|start"
        android:text="@string/lbl_busca_unidade_sincronizacao"
        android:textColor="@color/text_color_dark" />

    <EditText android:paddingTop="50dp"
        android:layout_width="184dp"
        android:hint="@string/lbl_codigo_unidade"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:maxLength="25"
        android:id="@+id/codigo_unidade"
        android:layout_gravity="center_horizontal" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/sinc_button"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAllCaps="true"
        android:text="@string/lbl_enviar" />
</LinearLayout>
