<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button android:id="@+id/btn_entrega_chave_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="selecionarOpcao"
            android:text="@string/lbl_entregar_chave"
            android:enabled="true"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button android:id="@+id/btn_saida_veiculos_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_saida_veiculos"
            android:onClick="selecionarOpcao"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button android:id="@+id/btn_entrada_veiculos_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selecionarOpcao"
            android:text="@string/lbl_entrada_veiculos"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button android:id="@+id/btn_devolucao_chaves_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selecionarOpcao"
            android:text="@string/lbl_devolucao_chaves"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
    <Button android:id="@+id/btn_status_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selecionarOpcao"
        android:text="@string/lbl_status"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>
